Dirty fix for elemnts overlap

--- a/source/data/controller.less
+++ b/source/data/controller.less
@@ -1310,6 +1310,10 @@ label.disabled {
     -webkit-animation-duration: 0.4s;
     -webkit-animation-iteration-count: 1;
     -webkit-animation-timing-function: ease-out;
+	position: absolute;
+	top: 20%; left: 0; bottom: 20%; right: 0;
+	margin: auto;
+	height: 60%;
 
     > img {
         margin-top: 3em;
